--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-torch==1.6.0
+torch==1.8.1+cu111
+torchvision==0.9.1+cu111
+torchaudio==0.8.1
 numpy==1.18.5
 tqdm==4.47.0
 scikit_learn==0.24.2
 tensorboardX==2.3
+tensorboard==2.10.1
+einops==0.4.1
